# capablanca

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO.md  board.cpp  board.h  evaluation.cpp  fen.cpp  fen.h  main.cpp  move.cpp  move.h  utils.cpp  utils.h
src/: board.cpp  board.hpp  board_hash.hpp  evaluation.cpp  fen.cpp  fen.hpp  main.cpp  move.cpp  move.hpp  negamax.cpp  negamax.hpp  uci.cpp  uci.hpp  utils.cpp
src/board/: board.cpp  board.hpp  move.cpp  move.hpp
src/communication/: fen.cpp  fen.hpp  uci.cpp
src/evaluation/: evaluation.cpp  evaluation.hpp  negamax.cpp  negamax.hpp
src/hashing/: board_hash.cpp  board_hash.hpp
src/utils/: utils.cpp  utils.hpp
tests/: board_evaluation_test.cpp  board_moves_test.cpp  boardtest.cpp  castling_test.cpp  fentest.cpp  generate_moves_test.cpp  ucitest.cpp
